--- a/mUI/mUI.csproj
+++ b/mUI/mUI.csproj
@@ -53,11 +53,13 @@
     <Compile Include="src\Concrete\mGUIInputDefault.cs" />
     <Compile Include="src\Concrete\mGUIMobileGetEvents.cs" />
     <Compile Include="src\Views\Elements\Abstract\UIClickableObj.cs" />
+    <Compile Include="src\Views\Elements\Abstract\UIGameObject.cs" />
     <Compile Include="src\Views\Elements\Abstract\UIObject.cs" />
+    <Compile Include="src\Views\Elements\Abstract\UIRect.cs" />
     <Compile Include="src\Views\Elements\UIButton.cs" />
     <Compile Include="src\Views\BaseView.cs" />
-    <Compile Include="src\Views\Elements\UICheckBox.cs" />
-    <Compile Include="src\Views\Elements\UICheckBoxGroup.cs" />
+    <Compile Include="src\Views\Elements\UIToggle.cs" />
+    <Compile Include="src\Views\Elements\UIToggleGroup.cs" />
     <Compile Include="src\Views\Elements\UISprite.cs" />
     <Compile Include="src\Views\PartialView.cs" />
     <Compile Include="src\Abstract\ISpriteRepository.cs" />
