--- a/mUI/mUI.csproj
+++ b/mUI/mUI.csproj
@@ -51,17 +51,21 @@
     <Compile Include="src\Abstract\IInputGetEvents.cs" />
     <Compile Include="src\Animations\Abstract\mUIAnimation.cs" />
     <Compile Include="src\Animations\Types\UILinearAnimation.cs" />
+    <Compile Include="src\Animations\Types\UIRotateAnimation.cs" />
+    <Compile Include="src\Animations\Types\UIScaleAnimation.cs" />
     <Compile Include="src\Concrete\mGUIDesktopGetEvents.cs" />
     <Compile Include="src\Concrete\mGUIInputDefault.cs" />
     <Compile Include="src\Concrete\mGUIMobileGetEvents.cs" />
     <Compile Include="src\Other\mUIBezierHelper.cs" />
     <Compile Include="src\Other\mUIEasingFunctions.cs" />
+    <Compile Include="src\Other\mUIFont.cs" />
     <Compile Include="src\Views\Elements\Abstract\UIClickableObj.cs" />
     <Compile Include="src\Views\Elements\Abstract\UIGameObject.cs" />
     <Compile Include="src\Views\Elements\Abstract\UIObject.cs" />
     <Compile Include="src\Views\Elements\Abstract\UIRect.cs" />
     <Compile Include="src\Views\Elements\UIButton.cs" />
     <Compile Include="src\Views\BaseView.cs" />
+    <Compile Include="src\Views\Elements\UILabel.cs" />
     <Compile Include="src\Views\Elements\UIToggle.cs" />
     <Compile Include="src\Views\Elements\UIToggleGroup.cs" />
     <Compile Include="src\Views\Elements\UISprite.cs" />
