--- a/mUI/mUI.csproj
+++ b/mUI/mUI.csproj
@@ -52,12 +52,14 @@
     <Compile Include="src\Abstract\IInputBase.cs" />
     <Compile Include="src\Abstract\IInputGetEvents.cs" />
     <Compile Include="src\Animations\Abstract\mUIAnimation.cs" />
+    <Compile Include="src\Animations\Types\UIColorAnimation.cs" />
     <Compile Include="src\Animations\Types\UILinearAnimation.cs" />
     <Compile Include="src\Animations\Types\UIRotateAnimation.cs" />
     <Compile Include="src\Animations\Types\UIScaleAnimation.cs" />
     <Compile Include="src\Concrete\mUIDesktopGetEvents.cs" />
     <Compile Include="src\Concrete\mUIInputDefault.cs" />
     <Compile Include="src\Concrete\mUIMobileGetEvents.cs" />
+    <Compile Include="src\Other\AES.cs" />
     <Compile Include="src\Other\mUIBezierHelper.cs" />
     <Compile Include="src\Other\mUIColors.cs" />
     <Compile Include="src\Other\mUIEasingFunctions.cs" />
