--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -54,7 +54,9 @@
     <Compile Include="src\mEngine.cs" />
     <Compile Include="src\mCore.cs" />
     <Compile Include="src\SpritesRepository.cs" />
+    <Compile Include="src\UI\components\UIButton.cs" />
     <Compile Include="src\UI\components\UISprite.cs" />
+    <Compile Include="src\UI\UIObject.cs" />
     <Compile Include="src\UI\views\BaseView.cs" />
     <Compile Include="src\UI\mUI.cs" />
     <Compile Include="src\UI\UICamera.cs" />
