--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -48,9 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\abstract\IUIClickable.cs" />
+    <Compile Include="src\Area2D.cs" />
+    <Compile Include="src\BoxArea2D.cs" />
     <Compile Include="src\events\EventListener.cs" />
     <Compile Include="src\events\EventsController.cs" />
     <Compile Include="src\events\MouseEventListener.cs" />
+    <Compile Include="src\extensions\SpriteExtension.cs" />
     <Compile Include="src\extensions\UIExtension.cs" />
     <Compile Include="src\abstract\ITicking.cs" />
     <Compile Include="src\extensions\GameObjectExtension.cs" />
@@ -59,10 +63,12 @@
     <Compile Include="src\mEngine.cs" />
     <Compile Include="src\mCore.cs" />
     <Compile Include="src\events\MouseEvent.cs" />
+    <Compile Include="src\mMath.cs" />
     <Compile Include="src\SpritesRepository.cs" />
     <Compile Include="src\StateableSprite.cs" />
     <Compile Include="src\UI\components\UIButton.cs" />
     <Compile Include="src\UI\components\UISprite.cs" />
+    <Compile Include="src\UI\UIClickable.cs" />
     <Compile Include="src\UI\UIObject.cs" />
     <Compile Include="src\UI\views\BaseView.cs" />
     <Compile Include="src\UI\mUI.cs" />
