--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -49,7 +49,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\abstract\IUIClickable.cs" />
+    <Compile Include="src\abstract\IUIRenderer.cs" />
     <Compile Include="src\Area2D.cs" />
+    <Compile Include="src\concrete\Pair.cs" />
     <Compile Include="src\RectangleArea2D.cs" />
     <Compile Include="src\events\EventListener.cs" />
     <Compile Include="src\events\EventsController.cs" />
@@ -62,6 +64,9 @@
     <Compile Include="src\mCore.cs" />
     <Compile Include="src\events\MouseEvent.cs" />
     <Compile Include="src\mMath.cs" />
+    <None Include="mFramework\SpriteClipping.shader">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Compile Include="src\SpritesRepository.cs" />
     <Compile Include="src\StateableSprite.cs" />
     <Compile Include="src\UI\components\UIButton.cs" />
@@ -77,10 +82,11 @@
     <Compile Include="src\UI\UICamera.cs" />
     <Compile Include="src\UI\UIView.cs" />
     <Compile Include="src\UI\UIComponent.cs" />
+    <None Include="mFramework\Sprites-Default.shader" />
+    <None Include="mFramework\Sprites-Diffuse.shader" />
+    <None Include="mFramework\Sprites-Mask.shader" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\concrete\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="libs\UnityEditor.dll" />
     <Content Include="libs\UnityEngine.dll" />
@@ -88,6 +94,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "D:\Unity Develop\mUI\mFramework\bin\Debug\mFramework.dll" "D:\Unity Develop\mUI\Example 5.5.0f3\Assets\Plugins"
-copy "D:\Unity Develop\mUI\mFramework\bin\Debug\mFramework.pdb" "D:\Unity Develop\mUI\Example 5.5.0f3\Assets\Plugins"</PostBuildEvent>
+copy "D:\Unity Develop\mUI\mFramework\bin\Debug\mFramework\*.*" "D:\Unity Develop\mUI\Example 5.5.0f3\Assets\mFramework\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
