--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -48,10 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\abstract\IColored.cs" />
     <Compile Include="src\abstract\IGlobalUniqueIdentifier.cs" />
     <Compile Include="src\abstract\IUIClickable.cs" />
     <Compile Include="src\abstract\IUIRenderer.cs" />
     <Compile Include="src\Area2D.cs" />
+    <Compile Include="src\concrete\AES.cs" />
     <Compile Include="src\concrete\BezierHelper.cs" />
     <Compile Include="src\concrete\EasingFunctions.cs" />
     <Compile Include="src\concrete\Pair.cs" />
@@ -73,8 +75,12 @@
     </None>
     <Compile Include="src\SpritesRepository.cs" />
     <Compile Include="src\StateableSprite.cs" />
+    <Compile Include="src\UI\animations\UIColorAnimation.cs" />
     <Compile Include="src\UI\animations\UILinearAnimation.cs" />
     <Compile Include="src\UI\animations\UIRotateAnimation.cs" />
+    <Compile Include="src\UI\animations\UIScaleAnimation.cs" />
+    <Compile Include="src\UI\components\UILabel.cs" />
+    <Compile Include="src\UI\fonts\TrueTypeFontReader.cs" />
     <Compile Include="src\UI\UIAnimation.cs" />
     <Compile Include="src\UI\components\UIButton.cs" />
     <Compile Include="src\UI\components\UIRadioGroup.cs" />
@@ -82,6 +88,8 @@
     <Compile Include="src\UI\components\UISprite.cs" />
     <Compile Include="src\UI\components\UIToggle.cs" />
     <Compile Include="src\UI\UIClickable.cs" />
+    <Compile Include="src\UI\UIColor.cs" />
+    <Compile Include="src\UI\UIColors.cs" />
     <Compile Include="src\UI\UIObject.cs" />
     <Compile Include="src\UI\UIRect.cs" />
     <Compile Include="src\UI\views\BaseView.cs" />
