--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -50,15 +51,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\abstract\IColored.cs" />
     <Compile Include="src\abstract\IGlobalUniqueIdentifier.cs" />
+    <Compile Include="src\abstract\IKeyValueStorage.cs" />
+    <Compile Include="src\abstract\ISaveableFieldBridge.cs" />
+    <Compile Include="src\abstract\ISaveableFields.cs" />
     <Compile Include="src\abstract\IUIClickable.cs" />
     <Compile Include="src\abstract\IUIRenderer.cs" />
-    <Compile Include="src\Area2D.cs" />
+    <Compile Include="src\concrete\Area2D.cs" />
     <Compile Include="src\concrete\AES.cs" />
     <Compile Include="src\concrete\BezierHelper.cs" />
+    <Compile Include="src\concrete\CachedFieldInfo.cs" />
+    <Compile Include="src\concrete\djb2Hash.cs" />
     <Compile Include="src\concrete\EasingFunctions.cs" />
     <Compile Include="src\concrete\Pair.cs" />
+    <Compile Include="src\concrete\PlayerPrefsStorage.cs" />
+    <Compile Include="src\concrete\SaveableField.cs" />
+    <Compile Include="src\concrete\SaveableFields.cs" />
     <Compile Include="src\concrete\UnidirectionalList.cs" />
-    <Compile Include="src\RectangleArea2D.cs" />
+    <Compile Include="src\concrete\RectangleArea2D.cs" />
     <Compile Include="src\events\EventListener.cs" />
     <Compile Include="src\events\EventsController.cs" />
     <Compile Include="src\events\MouseEventListener.cs" />
@@ -73,8 +82,8 @@
     <None Include="mFramework\SpriteClipping.shader">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Compile Include="src\SpritesRepository.cs" />
-    <Compile Include="src\StateableSprite.cs" />
+    <Compile Include="src\concrete\SpritesRepository.cs" />
+    <Compile Include="src\concrete\StateableSprite.cs" />
     <Compile Include="src\UI\animations\UIColorAnimation.cs" />
     <Compile Include="src\UI\animations\UILinearAnimation.cs" />
     <Compile Include="src\UI\animations\UIRotateAnimation.cs" />
