--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -59,6 +59,7 @@
     <Compile Include="src\abstract\ISaveableFields.cs" />
     <Compile Include="src\abstract\IUIClickable.cs" />
     <Compile Include="src\abstract\IUIRenderer.cs" />
+    <Compile Include="src\abstract\IView.cs" />
     <Compile Include="src\achievements\AchievementsHandler.cs" />
     <Compile Include="src\concrete\Area2D.cs" />
     <Compile Include="src\concrete\AES.cs" />
@@ -72,6 +73,8 @@
     <Compile Include="src\concrete\SaveableField.cs" />
     <Compile Include="src\concrete\SaveableFields.cs" />
     <Compile Include="src\concrete\SaveableFieldsHandler.cs" />
+    <Compile Include="src\concrete\TimerAction.cs" />
+    <Compile Include="src\extensions\UIObjectExtension.cs" />
     <Compile Include="src\UI\events\AddedAnimationEventArgs.cs" />
     <Compile Include="src\UI\events\AddedСhildObjectEventArgs.cs" />
     <Compile Include="src\UI\events\AnimationEventArgs.cs" />
