--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -63,6 +63,7 @@
     <Compile Include="src\achievements\AchievementsHandler.cs" />
     <Compile Include="src\concrete\Area2D.cs" />
     <Compile Include="src\concrete\AES.cs" />
+    <Compile Include="src\concrete\B64X.cs" />
     <Compile Include="src\concrete\BezierHelper.cs" />
     <Compile Include="src\concrete\CachedFieldInfo.cs" />
     <Compile Include="src\concrete\djb2Hash.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="src\concrete\SaveableFieldsHandler.cs" />
     <Compile Include="src\concrete\TimerAction.cs" />
     <Compile Include="src\extensions\UIObjectExtension.cs" />
+    <Compile Include="src\extensions\VectorExtension.cs" />
     <Compile Include="src\UI\components\UIContainer.cs" />
     <Compile Include="src\UI\events\AddedAnimationEventArgs.cs" />
     <Compile Include="src\UI\events\AddedСhildObjectEventArgs.cs" />
