--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ bld/
 [Bb]in/
 [Oo]bj/
 
-#.idea/
-#.vs/
+.idea/
+.vs/
 # Visual Studio 2015 cache/options directory
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
