--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -55,6 +55,7 @@
     <Compile Include="src\abstract\IColored.cs" />
     <Compile Include="src\abstract\IGlobalUniqueIdentifier.cs" />
     <Compile Include="src\abstract\IKeyValueStorage.cs" />
+    <Compile Include="src\abstract\IMaskable.cs" />
     <Compile Include="src\abstract\ISaveableFieldBridge.cs" />
     <Compile Include="src\abstract\ISaveableFields.cs" />
     <Compile Include="src\abstract\IUIClickable.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="src\extensions\VectorExtension.cs" />
     <Compile Include="src\UI\animations\UIBezierQuadraticAnimation.cs" />
     <Compile Include="src\UI\components\UIContainer.cs" />
+    <Compile Include="src\UI\components\UIMask.cs" />
     <Compile Include="src\UI\components\UIMesh.cs" />
     <Compile Include="src\UI\components\UIPageSlider.cs" />
     <Compile Include="src\UI\components\UITextBox.cs" />
