UITextBox, refactoring, fixs, ...

--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -81,19 +81,18 @@
     <Compile Include="src\extensions\VectorExtension.cs" />
     <Compile Include="src\UI\animations\UIBezierQuadraticAnimation.cs" />
     <Compile Include="src\UI\components\UIContainer.cs" />
-    <Compile Include="src\UI\components\UIMask.cs" />
     <Compile Include="src\UI\components\UIMesh.cs" />
     <Compile Include="src\UI\components\UIPageSlider.cs" />
     <Compile Include="src\UI\components\UITextBox.cs" />
-    <Compile Include="src\UI\events\AddedAnimationEventArgs.cs" />
-    <Compile Include="src\UI\events\AddedСhildObjectEventArgs.cs" />
-    <Compile Include="src\UI\events\AnimationEventArgs.cs" />
-    <Compile Include="src\UI\events\ButtonEventArgs.cs" />
-    <Compile Include="src\UI\events\RemovedСhildObjectEventArgs.cs" />
-    <Compile Include="src\UI\events\RotatedEventArgs.cs" />
-    <Compile Include="src\UI\events\ScaledEventArgs.cs" />
-    <Compile Include="src\UI\events\ScrollBarChangedEventArgs.cs" />
-    <Compile Include="src\UI\events\TranslatedEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\AddedAnimationEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\AddedСhildObjectEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\AnimationEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\ButtonEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\RemovedСhildObjectEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\RotatedEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\ScaledEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\ScrollBarChangedEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\TranslatedEventArgs.cs" />
     <Compile Include="src\UI\UIEventHandler.cs" />
     <Compile Include="src\concrete\UnidirectionalList.cs" />
     <Compile Include="src\concrete\RectangleArea2D.cs" />
@@ -117,7 +116,7 @@
     <Compile Include="src\UI\animations\UIScaleAnimation.cs" />
     <Compile Include="src\UI\components\UILabel.cs" />
     <Compile Include="src\UI\components\UIScrollBar.cs" />
-    <Compile Include="src\UI\events\RemovedAnimationEventArgs.cs" />
+    <Compile Include="src\UI\ui_events\RemovedAnimationEventArgs.cs" />
     <Compile Include="src\UI\fonts\TrueTypeFontReader.cs" />
     <Compile Include="src\UI\UIAnimation.cs" />
     <Compile Include="src\UI\components\UIButton.cs" />
