--- a/mEditor/mEditor.csproj
+++ b/mEditor/mEditor.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\components\UILabelEditor.cs" />
     <Compile Include="src\mEditor.cs" />
-    <Compile Include="src\UIObjectEditor.cs" />
+    <Compile Include="src\components\UIBaseEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\mFramework\mFramework.csproj">
