Refactoring, analytics, game events, fixs, ...

--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -75,14 +75,14 @@
     <Compile Include="src\concrete\Pair.cs" />
     <Compile Include="src\concrete\PlayerPrefsStorage.cs" />
     <Compile Include="src\concrete\RepeatAction.cs" />
-    <Compile Include="src\concrete\SaveableField.cs" />
-    <Compile Include="src\concrete\SaveableFields.cs" />
-    <Compile Include="src\concrete\SaveableFieldsHandler.cs" />
+    <Compile Include="src\saves\SaveableField.cs" />
+    <Compile Include="src\saves\SaveableFields.cs" />
+    <Compile Include="src\saves\SaveableFieldsHelper.cs" />
     <Compile Include="src\concrete\TimerAction.cs" />
     <Compile Include="src\extensions\UIObjectExtension.cs" />
     <Compile Include="src\extensions\VectorExtension.cs" />
-    <Compile Include="src\gamefunnels\Event.cs" />
-    <Compile Include="src\gamefunnels\mGameFunnels.cs" />
+    <Compile Include="src\game_events\Event.cs" />
+    <Compile Include="src\game_events\mGameEvents.cs" />
     <Compile Include="src\remotesettings\mRemoteSettings.cs" />
     <Compile Include="src\UI\animations\UIBezierQuadraticAnimation.cs" />
     <Compile Include="src\UI\components\UIContainer.cs" />
