--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -62,6 +62,7 @@
     <Compile Include="src\abstract\IUIRenderer.cs" />
     <Compile Include="src\abstract\IView.cs" />
     <Compile Include="src\achievements\mAchievements.cs" />
+    <Compile Include="src\analytics\AnalyticsEvents.cs" />
     <Compile Include="src\analytics\AnalyticsStats.cs" />
     <Compile Include="src\analytics\mAnalytics.cs" />
     <Compile Include="src\concrete\Area2D.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="src\concrete\EasingFunctions.cs" />
     <Compile Include="src\concrete\NtpClient.cs" />
     <Compile Include="src\concrete\ObjectPool.cs" />
+    <Compile Include="src\concrete\OnlineCheck.cs" />
     <Compile Include="src\concrete\Pair.cs" />
     <Compile Include="src\concrete\PlayerPrefsStorage.cs" />
     <Compile Include="src\concrete\RepeatAction.cs" />
