Refactor UI interfaces, update ScreenSession

--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -82,12 +82,13 @@
     <Compile Include="src\saves\SaveableFields.cs" />
     <Compile Include="src\saves\SaveableFieldsHelper.cs" />
     <Compile Include="src\concrete\TimerAction.cs" />
-    <Compile Include="src\extensions\UIObjectExtension.cs" />
+    <Compile Include="src\UI\extensions\UIObjectExtension.cs" />
     <Compile Include="src\extensions\VectorExtension.cs" />
     <Compile Include="src\game_events\Event.cs" />
     <Compile Include="src\game_events\mGameEvents.cs" />
     <Compile Include="src\remotesettings\mRemoteSettings.cs" />
     <Compile Include="src\UI\abstract\IUIColored.cs" />
+    <Compile Include="src\UI\abstract\IUIObject.cs" />
     <Compile Include="src\UI\abstract\IUIRenderer.cs" />
     <Compile Include="src\UI\abstract\IUISpriteRenderer.cs" />
     <Compile Include="src\UI\common\UISpriteRenderer.cs" />
@@ -99,15 +100,6 @@
     <Compile Include="src\UI\components\UITextBox.cs" />
     <Compile Include="src\UI\UIFont.cs" />
     <Compile Include="src\UI\UIStencilMaterials.cs" />
-    <Compile Include="src\UI\ui_events\AddedAnimationEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\AddedСhildObjectEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\AnimationEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\ButtonEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\RemovedСhildObjectEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\RotatedEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\ScaledEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\ScrollBarChangedEventArgs.cs" />
-    <Compile Include="src\UI\ui_events\TranslatedEventArgs.cs" />
     <Compile Include="src\UI\UIEventHandler.cs" />
     <Compile Include="src\concrete\UnidirectionalList.cs" />
     <Compile Include="src\concrete\RectangleArea2D.cs" />
@@ -130,7 +122,6 @@
     <Compile Include="src\UI\animations\UIScaleAnimation.cs" />
     <Compile Include="src\UI\components\UILabel.cs" />
     <Compile Include="src\UI\components\UIScrollBar.cs" />
-    <Compile Include="src\UI\ui_events\RemovedAnimationEventArgs.cs" />
     <Compile Include="src\UI\UIAnimation.cs" />
     <Compile Include="src\UI\components\UIButton.cs" />
     <Compile Include="src\UI\components\UIRadioGroup.cs" />
