--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -58,7 +58,7 @@
     <Compile Include="src\abstract\ISaveableFieldBridge.cs" />
     <Compile Include="src\abstract\ISaveableFields.cs" />
     <Compile Include="src\UI\abstract\IUIClickable.cs" />
-    <Compile Include="src\abstract\IView.cs" />
+    <Compile Include="src\UI\abstract\IView.cs" />
     <Compile Include="src\achievements\mAchievements.cs" />
     <Compile Include="src\analytics\AnalyticsEvents.cs" />
     <Compile Include="src\analytics\AnalyticsHelper.cs" />
@@ -82,6 +82,9 @@
     <Compile Include="src\saves\SaveableFields.cs" />
     <Compile Include="src\saves\SaveableFieldsHelper.cs" />
     <Compile Include="src\concrete\TimerAction.cs" />
+    <Compile Include="src\UI\components\Slider\UIBaseSlider.cs" />
+    <Compile Include="src\UI\components\Slider\UIHorizontalSlider.cs" />
+    <Compile Include="src\UI\components\Slider\UIVerticalSlider.cs" />
     <Compile Include="src\UI\extensions\UIObjectExtension.cs" />
     <Compile Include="src\extensions\VectorExtension.cs" />
     <Compile Include="src\game_events\Event.cs" />
@@ -98,6 +101,7 @@
     <Compile Include="src\UI\components\UIMesh.cs" />
     <Compile Include="src\UI\components\UIPageSlider.cs" />
     <Compile Include="src\UI\components\UITextBox.cs" />
+    <Compile Include="src\UI\layouts\LayoutElemsDirection.cs" />
     <Compile Include="src\UI\UIFont.cs" />
     <Compile Include="src\UI\UIStencilMaterials.cs" />
     <Compile Include="src\UI\UIEventHandler.cs" />
@@ -125,7 +129,7 @@
     <Compile Include="src\UI\UIAnimation.cs" />
     <Compile Include="src\UI\components\UIButton.cs" />
     <Compile Include="src\UI\components\UIRadioGroup.cs" />
-    <Compile Include="src\UI\components\UISlider.cs" />
+    <Compile Include="src\UI\components\Slider\UISlider.cs" />
     <Compile Include="src\UI\components\UISprite.cs" />
     <Compile Include="src\UI\components\UIToggle.cs" />
     <Compile Include="src\UI\UIClickable.cs" />
